@startuml
'https://plantuml.com/class-diagram

class Ship
class CargoShip
class CruiseShip


Object <|-- Ship
Ship <|-- CruiseShip
Ship <|-- CargoShip



class Ship {
    - name: String
    - year: String

    + Ship(name: String, year: String)
    + getName(): String
    + setName(name: String): void
    + getYear(): String
    + setYear(year: String): void
    + toString(): String
}

class CruiseShip {
    - MAX_CAPACITY: int

    + CruiseShip(name: String, year: String, capacity: int)
    + getMAX_CAPACITY(): int
    + setMAX_CAPACITY(newCapacity: int): void
    + toString(): String
}

class CargoShip {
    - cargoCapacity: int

    + CargoShip(name: String, year: String, cargoCapacity: int)
    + getTonnage(): int
    + setTonnage(tonnage: int): void
    + toString(): String
}

@enduml